Fix navbar without z-index

--- a/mysite/booking/static/booking/navbar.css
+++ b/mysite/booking/static/booking/navbar.css
@@ -2,6 +2,7 @@ header {
     position: sticky;
     top: 0;
     box-shadow: 0 0 0.4rem 0.1rem rgba(0, 0, 0, 0.15);
+    z-index: 50;
 }
 
 #navbar {
